# tileshop-rag

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  API_DOCUMENTATION.md  CLIP_VISION_INTEGRATION.md  DATABASE_SCHEMA_ENHANCEMENTS.md  Dockerfile  Dockerfile.backup  INTELLIGENT_PARSING_IMPLEMENTATION_COMPLETE.md  LLM_ENHANCEMENT_DOCUMENTATION.md  NEPQ_SCORING_SYSTEM.md  PRODUCTION_DEPLOYMENT.md  Procfile  README.md  README_expanded.md  RECOMMENDATION_SYSTEM_ENHANCEMENTS.md  SMART_VISION_TRIGGERS.md  TROUBLESHOOTING_GUIDE.md  acquire_all_products.py  acquire_from_sitemap.py  admin_dashboard.py  analyze_specs.py  api_key_solution.py  app.py  audit_tile_data_extraction.py  auto_install_packages.py  browser_scraper.py  browser_scraper_v2.py  categorize_sitemap.py  categorized_sitemap.json  category_parsers.py  category_selection.json  check_missing_packages.py  check_results_table.py  compare_packages.py  contractor_chat_app.py  curl_scraper.py  customer_chat_app.py  dashboard_app.py  (+102 more)
autogen_env/: pyvenv.cfg
knowledge_base/: NEPQ_Objection_Handling_Guide.md  README.md  adhesives_tools_guide.md  advanced_techniques.md  anti_fracture_membrane_guide.md  aos_sales_training.md  (+16 more)
tileshop_intelligence/: .gitignore  backfill_per_piece_pricing.py  download_sitemap.py  extract_html.sh  pyproject.toml  rag_web_ui.py  requirements.txt  simple_rag_backup.py
tileshop_intelligence/modules/: __init__.py  docker_manager.py  rag_manager.py
tileshop_intelligence/static/: chat.js
tileshop_intelligence/templates/: chat.html  chat_backup.html  dashboard.html  index.html
(+270 files in other folders)
